style: update color scheme for navigation and footer; improve readability fix: update dashboard text for clarity; remove unnecessary references refactor: add permission checks for menu visibility in navigation fix: adjust customer index script to conditionally generate PKD number

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17710,7 +17710,7 @@ nav .app-nav .main-nav > li:not(.menu-title) {
 nav .app-nav .main-nav > li:not(.menu-title) > a {
   padding: 0.6rem 1rem;
   font-weight: 500;
-  color: rgba(var(--dark), 1);
+  color: white;
   width: 100%;
   display: inline-flex;
   font-size: 16px;
@@ -17720,7 +17720,7 @@ nav .app-nav .main-nav > li:not(.menu-title) > a {
 }
 nav .app-nav .main-nav > li:not(.menu-title) > a[aria-expanded=true] {
   background: rgba(var(--primary), 0.3);
-  color: rgba(var(--primary-dark), 1);
+  color: white;
   font-weight: 600;
 }
 nav .app-nav .main-nav > li:not(.menu-title) > a[aria-expanded=true] .badge {
@@ -17827,7 +17827,7 @@ nav .app-nav .menu-title {
   margin-bottom: 0.75rem;
 }
 nav .app-nav .menu-title span {
-  color: rgba(var(--secondary-dark), 1);
+  color: white;
   font-size: 13px;
   font-weight: 500;
   background-color: transparent;
@@ -17840,7 +17840,7 @@ nav .app-nav .menu-item {
 }
 nav .app-nav .menu-item .btn {
   padding: 0;
-  color: rgba(var(--secondary), 1);
+  color: white;
   font-weight: 500;
 }
 nav .app-nav .menu-item .btn .ti:before {
@@ -17937,7 +17937,7 @@ nav .app-nav .menu-item .btn .ti:before {
   overflow: hidden;
   white-space: nowrap;
   font-size: 10px;
-  color: rgba(var(--primary), 1);
+  color: white;
   transition: var(--app-transition);
 }
 .app-wrapper .semi-nav .app-nav .main-nav {
